@@ -17,6 +17,8 @@ package org.apache.tika.parser.jdbc;
  */
 
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -51,8 +53,6 @@ import org.xml.sax.Attributes;
 import org.xml.sax.ContentHandler;
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.AttributesImpl;
-
-import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * General base class to iterate through rows of a JDBC table
@@ -112,7 +112,7 @@ class JDBCTableReader {
                 handleClob(tableName, rsmd.getColumnName(i), rows, results, i, handler, context);
                 break;
             case Types.BOOLEAN:
-                handleBoolean(results.getBoolean(i), handler);
+                handleBoolean(results, i, handler);
                 break;
             case Types.DATE:
                 handleDate(results, i, handler);
@@ -121,18 +121,27 @@ class JDBCTableReader {
                 handleTimeStamp(results, i, handler);
                 break;
             case Types.INTEGER:
-                handleInteger(rsmd.getColumnTypeName(i), results, i, handler);
+                handleInteger(results, i, handler);
                 break;
             case Types.FLOAT:
                 //this is necessary to handle rounding issues in presentation
                 //Should we just use getString(i)?
-                addAllCharacters(Float.toString(results.getFloat(i)), handler);
+                float f = results.getFloat(i);
+                if (! results.wasNull()) {
+                    addAllCharacters(Float.toString(f), handler);
+                }
                 break;
             case Types.DOUBLE:
-                addAllCharacters(Double.toString(results.getDouble(i)), handler);
+                double d = results.getDouble(i);
+                if (! results.wasNull()) {
+                    addAllCharacters(Double.toString(d), handler);
+                }
                 break;
             default:
-                addAllCharacters(results.getString(i), handler);
+                String s = results.getString(i);
+                if (!results.wasNull()) {
+                    addAllCharacters(s, handler);
+                }
                 break;
         }
     }
@@ -154,12 +163,18 @@ class JDBCTableReader {
         return headers;
     }
 
-    protected void handleInteger(String columnTypeName, ResultSet rs, int columnIndex, ContentHandler handler) throws SQLException, SAXException {
-        addAllCharacters(Integer.toString(rs.getInt(columnIndex)), handler);
+    protected void handleInteger(ResultSet rs, int columnIndex, ContentHandler handler) throws SQLException, SAXException {
+        int i = rs.getInt(columnIndex);
+        if (! rs.wasNull()) {
+            addAllCharacters(Integer.toString(i), handler);
+        }
     }
 
-    private void handleBoolean(boolean aBoolean, ContentHandler handler) throws SAXException {
-        addAllCharacters(Boolean.toString(aBoolean), handler);
+    private void handleBoolean(ResultSet rs, int columnIndex, ContentHandler handler) throws SAXException, SQLException {
+        boolean b = rs.getBoolean(columnIndex);
+        if (! rs.wasNull()) {
+            addAllCharacters(Boolean.toString(b), handler);
+        }
     }
 
 
@@ -167,6 +182,9 @@ class JDBCTableReader {
                               ResultSet resultSet, int columnIndex,
                               ContentHandler handler, ParseContext context) throws SQLException, IOException, SAXException {
         Clob clob = resultSet.getClob(columnIndex);
+        if (resultSet.wasNull()) {
+            return;
+        }
         boolean truncated = clob.length() > Integer.MAX_VALUE || clob.length() > maxClobLength;
 
         int readSize = (clob.length() < maxClobLength ? (int) clob.length() : maxClobLength);
@@ -201,8 +219,11 @@ class JDBCTableReader {
         InputStream is = null;
         EmbeddedDocumentExtractor ex = AbstractDBParser.getEmbeddedDocumentExtractor(context);
         try {
-            is = TikaInputStream.get(getInputStreamFromBlob(resultSet, columnIndex, blob, m));
-
+            blob = getBlob(resultSet, columnIndex, m);
+            if (blob == null) {
+                return;
+            }
+            is = TikaInputStream.get(blob, m);
             Attributes attrs = new AttributesImpl();
             ((AttributesImpl) attrs).addAttribute("", "type", "type", "CDATA", "blob");
             ((AttributesImpl) attrs).addAttribute("", "column_name", "column_name", "CDATA", columnName);
@@ -227,7 +248,7 @@ class JDBCTableReader {
             if (blob != null) {
                 try {
                     blob.free();
-                } catch (SQLException e) {
+                } catch (SQLException|UnsupportedOperationException e) {
                     //swallow
                 }
             }
@@ -236,8 +257,20 @@ class JDBCTableReader {
         handler.endElement("", "span", "span");
     }
 
-    protected InputStream getInputStreamFromBlob(ResultSet resultSet, int columnIndex, Blob blob, Metadata metadata) throws SQLException {
-        return TikaInputStream.get(blob, metadata);
+    /**
+     *
+     * @param resultSet result set to grab value from
+     * @param columnIndex index in result set
+     * @param metadata metadata to populate or use for each implementation
+     * @return the blob or <code>null</code> if the value was null
+     * @throws SQLException
+     */
+    protected Blob getBlob(ResultSet resultSet, int columnIndex, Metadata metadata) throws SQLException {
+        Blob blob = resultSet.getBlob(columnIndex);
+        if (! resultSet.wasNull()) {
+            return blob;
+        }
+        return null;
     }
 
     protected void handleDate(ResultSet resultSet, int columnIndex, ContentHandler handler) throws SAXException, SQLException {
@@ -249,6 +282,9 @@ class JDBCTableReader {
     }
 
     protected void addAllCharacters(String s, ContentHandler handler) throws SAXException {
+        if (s == null) {
+            return;
+        }
         char[] chars = s.toCharArray();
         handler.characters(chars, 0, chars.length);
     }
