@@ -16,17 +16,13 @@ package org.apache.tika.parser.jdbc;
  * limitations under the License.
  */
 
+import javax.sql.rowset.serial.SerialBlob;
 import java.io.IOException;
-import java.io.InputStream;
 import java.sql.Blob;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.text.DateFormat;
-import java.text.SimpleDateFormat;
-import java.util.Locale;
 
-import org.apache.tika.io.TikaInputStream;
 import org.apache.tika.metadata.Metadata;
 import org.apache.tika.parser.ParseContext;
 import org.xml.sax.ContentHandler;
@@ -37,16 +33,11 @@ import org.xml.sax.SAXException;
  * Concrete class for SQLLite table parsing.  This overrides
  * column type handling from JDBCRowHandler.
  * <p/>
- * This class is not designed to be thread safe (because of DateFormat)!
- * Need to call a new instance for each parse, as AbstractDBParser does.
- * <p/>
  * For now, this silently skips cells of type CLOB, because xerial's jdbc connector
  * does not currently support them.
  */
 class SQLite3TableReader extends JDBCTableReader {
 
-
-    DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd", Locale.ROOT);
 
     public SQLite3TableReader(Connection connection, String tableName, ParseContext context) {
         super(connection, tableName, context);
@@ -74,36 +65,12 @@ class SQLite3TableReader extends JDBCTableReader {
         //no-op for now.
     }
 
-    /**
-     * The jdbc connection to Sqlite does not yet implement blob, have to getBytes().
-     *
-     * @param resultSet   resultSet
-     * @param columnIndex columnIndex for blob
-     * @return
-     * @throws java.sql.SQLException
-     */
     @Override
-    protected InputStream getInputStreamFromBlob(ResultSet resultSet, int columnIndex, Blob blob, Metadata m) throws SQLException {
-        return TikaInputStream.get(resultSet.getBytes(columnIndex), m);
-    }
-
-    @Override
-    protected void handleInteger(String columnTypeName, ResultSet rs, int columnIndex,
-                                 ContentHandler handler) throws SQLException, SAXException {
-        //As of this writing, with xerial's sqlite jdbc connector, a timestamp is
-        //stored as a column of type Integer, but the columnTypeName is TIMESTAMP, and the
-        //value is a string representing a Long.
-        if (columnTypeName.equals("TIMESTAMP")) {
-            addAllCharacters(parseDateFromLongString(rs.getString(columnIndex)), handler);
-        } else {
-            addAllCharacters(Integer.toString(rs.getInt(columnIndex)), handler);
+    protected Blob getBlob(ResultSet resultSet, int columnIndex, Metadata m) throws SQLException {
+        byte[] bytes = resultSet.getBytes(columnIndex);
+        if (!resultSet.wasNull()) {
+            return new SerialBlob(bytes);
         }
-
-    }
-
-    private String parseDateFromLongString(String longString) throws SAXException {
-        java.sql.Date d = new java.sql.Date(Long.parseLong(longString));
-        return dateFormat.format(d);
-
+        return null;
     }
 }
